# trace-eval

./: .gitignore  .pre-commit-config.yaml  ALPHA_BLOCKERS.md  ALPHA_CASE_STUDY_POST.md  ALPHA_FEEDBACK.md  ALPHA_FRICTION.md  ALPHA_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOGFOOD_PLAN.md  LAUNCH_ASSETS.md  LICENSE  PYPI_RECOMMENDATION.md  README.md  RELEASE_NOTES.md  SECURITY.md  SPRINT2_DELIVERABLES.md  SPRINT3_DELIVERABLES.md  SPRINT4_DELIVERABLES.md  SPRINT5_DELIVERABLES.md  pyproject.toml
.git-hooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/: AGENT_PROMPT.md  rules.md
docs/: AGENT_INTEGRATION.md  AGENT_PICKUP.md  ARCHITECTURE.md  CI_INTEGRATION.md  TROUBLESHOOTING.md  agent-skill.md  alpha-operator.md  alpha.md  feedback-template.md  validation-report.md
docs/superpowers/plans/: 2026-04-17-guided-remediation-ux.md  2026-04-17-sprint5-adoption-ux.md
docs/superpowers/specs/: 2026-04-17-embedded-workflow-loop-design.md
examples/: after.jsonl  before.jsonl  case_study.md  claude_code_good.jsonl  claude_code_real.jsonl  claude_code_real_2.jsonl  cursor_sample.jsonl  hermes_bad.jsonl  hermes_good.jsonl  openclaw_after.jsonl  openclaw_before.jsonl
examples/demo/: bad-run.txt  ci-pass.txt  compare.txt  good-run.txt
examples/github-actions/: agent-quality.yml
scripts/: build-binary.sh
tests/: test_autofix.py  test_binary_smoke.py  test_ci_contract.py  test_cli.py  test_context.py  test_convert_cursor.py  test_doc_commands.py  test_doctor.py  test_efficiency.py  test_efficiency_telemetry.py  test_golden_fixtures.py  test_hermes.py  test_loader.py  test_locate.py  test_loop.py  test_mcp_server.py  test_native_fixtures.py  test_rating_consistency.py  test_registry.py  test_reliability.py  test_remediation.py  test_remediation_context.py  test_report.py  test_retrieval.py  test_schema.py  test_scoring.py  test_scoring_invariants.py  test_temp_cleanup.py  test_tool_discipline.py
tests/fixtures/: golden_fixtures.py  trace_missing_vercel.jsonl
tests/fixtures/native/: claude_code_expected.jsonl  claude_code_expected_scores.json  claude_code_native.jsonl  cursor_expected.jsonl  cursor_expected_scores.json  cursor_native.jsonl  openclaw_expected.jsonl  openclaw_expected_scores.json  openclaw_native.jsonl
trace_eval/: __init__.py  autofix.py  cli.py  convert.py  doctor.py  loader.py  locate.py  loop.py  mcp_server.py  registry.py  remediation.py  report.py  schema.py  scoring.py  tool_correlation.py
trace_eval/adapters/: generic_jsonl.py  hermes.py
trace_eval/judges/: context.py  efficiency.py  registry.py  reliability.py  retrieval.py  tool_discipline.py
