[project]
name = "trace-eval"
version = "0.1.0"
description = "Deterministic-first CLI for evaluating AI agent traces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
